--- a/config/controller.yaml
+++ b/config/controller.yaml
@@ -1,10 +1,13 @@
-# Publish all joint states -----------------------------------
-joint_state_controller:
-  type: joint_state_controller/JointStateController
-  publish_rate: 50
+# config/controller.yaml
+controller_manager:
+  ros__parameters:
+    update_rate: 100
 
-# Position Controllers --------------------------------------
-left_finger_controller:
-  type: position_controllers/JointPositionController
-  joint: left_finger_joint
-  pid: {p: 100.0, i: 0.01, d: 10.0}
+    joint_state_broadcaster:
+      type: joint_state_broadcaster/JointStateBroadcaster
+      publish_rate: 50
+
+    left_finger_controller:
+      type: effort_controllers/JointPositionController
+      joint: left_finger_joint
+      pid: {p: 100.0, i: 0.01, d: 10.0}
