--- a/package.xml
+++ b/package.xml
@@ -1,26 +1,23 @@
 <?xml version="1.0"?>
-<package format="2">
+<package format="3">
   <name>onrobot_2fg7_description</name>
-  <version>0.0.0</version>
-<description>The onrobot_2fg7_description package</description>
+  <version>0.0.1</version>
+  <description>The onrobot_2fg7_description package adapted for ROS 2</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag -->
-  <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="juan97pena@gmail.com">Juan Diego</maintainer>
+  <maintainer email="gabri.novas@aimen.es">Gabriel Novas</maintainer>
 
+  <license>Apache-2.0</license>
 
+  <!-- Build tool -->
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <license>TODO</license>
+  <!-- Dependencies -->
+  <depend>rclpy</depend>
+  <depend>gazebo_ros</depend>
+  <depend>robot_state_publisher</depend>
+  <depend>xacro</depend>
 
-
-  <buildtool_depend>catkin</buildtool_depend>
-
-  <depend>rospy</depend>
-  <depend>gazebo_grasp_plugin</depend>
-  <depend>roboticsgroup_upatras_gazebo_plugins</depend>
-
-
-
-
+  <export>
+    <!-- No export tags needed for simple description package -->
+  </export>
 </package>
