--- a/package.xml
+++ b/package.xml
@@ -12,14 +12,16 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <!-- Dependencies -->
-  <depend>urdf</depend>
-  <depend>ros2launch</depend>
+  <depend>launch_ros</depend>
+  <depend>launch</depend>
   <depend>rclpy</depend>
   <depend>gazebo_ros</depend>
   <depend>robot_state_publisher</depend>
+  <depend>ros2_control</depend>
   <depend>xacro</depend>
+  <depend>urdf</depend>
 
   <export>
-    <!-- No export tags needed for simple description package -->
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
