--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,36 @@
 cmake_minimum_required(VERSION 3.8)
 project(onrobot_2fg7_gripper_description)
 
-# Find dependencies
-find_package(ament_cmake REQUIRED)
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic)
+endif()
 
-# Install files from the launch, meshes, and urdf directories
+find_package(ament_cmake REQUIRED)
+find_package(urdf REQUIRED)
+find_package(xacro REQUIRED)
+
+# Install URDF files
 install(
-  DIRECTORY
-    launch
-    meshes
-    urdf
-  DESTINATION
-    share/${PROJECT_NAME}
+  DIRECTORY urdf
+  DESTINATION share/${PROJECT_NAME}
+)
+
+# Install meshes
+install(
+  DIRECTORY meshes
+  DESTINATION share/${PROJECT_NAME}
+)
+
+# Install launch files
+install(
+  DIRECTORY launch
+  DESTINATION share/${PROJECT_NAME}
+)
+
+# Install RViz config
+install(
+  DIRECTORY config
+  DESTINATION share/${PROJECT_NAME}
 )
 
 ament_package()
