--- a/launch/controller.yaml
+++ b/launch/controller.yaml
@@ -5,7 +5,7 @@
     publish_rate: 50
 
   # Position Controllers --------------------------------------
-  lef_finger_joint_position_controller:
+  left_finger_joint_position_controller:
     type: effort_controllers/JointPositionController
-    joint: lef_finger_joint
+    joint: left_finger_joint
     pid: {p: 100.0, i: 0.01, d: 10.0}
