--- a/config/controller.yaml
+++ b/config/controller.yaml
@@ -7,7 +7,7 @@ controller_manager:
       type: joint_state_broadcaster/JointStateBroadcaster
       publish_rate: 50
 
-    left_finger_controller:
+    onrobot_2fg7_gripper_controller:
       type: effort_controllers/JointPositionController
       joint: left_finger_joint
       pid: {p: 100.0, i: 0.01, d: 10.0}
