--- a/package.xml
+++ b/package.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
-<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypelayout="1.0"?>
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>onrobot_2fg7_gripper_description</name>
   <version>1.0.0</version>
   <description>URDF description and meshes for OnRobot 2FG7 gripper</description>
-  <maintainer email="your-email@example.com">Your Name</maintainer>
+  <maintainer email="gabriel.novas@aimen.es">Gabriel Novas</maintainer>
   <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
@@ -14,7 +14,7 @@
 
   <!-- Only keep these if you're actually using them in the display launch -->
   <exec_depend>robot_state_publisher</exec_depend>
-  <exec_depend>joint_state_publisher_gui</exec_depend>  <!-- Changed from joint_state_publisher -->
+  <exec_depend>joint_state_publisher_gui</exec_depend>
   <exec_depend>rviz2</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
